--- a/packages/cubejs-server-core/package.json
+++ b/packages/cubejs-server-core/package.json
@@ -28,6 +28,7 @@
     "@cubejs-backend/api-gateway": "^0.24.4",
     "@cubejs-backend/query-orchestrator": "^0.24.4",
     "@cubejs-backend/schema-compiler": "^0.24.4",
+    "@cubejs-backend/shared": "^0.24.3",
     "@hapi/joi": "^15.1.1",
     "codesandbox-import-utils": "^2.1.12",
     "cross-spawn": "^7.0.1",
@@ -39,7 +40,6 @@
     "lru-cache": "^5.1.1",
     "moment": "^2.29.1",
     "node-fetch": "^2.6.0",
-    "node-machine-id": "^1.1.10",
     "prettier": "^1.16.4",
     "promise-timeout": "^1.3.0",
     "ramda": "^0.27.0",
