--- a/packages/cubejs-server-core/package.json
+++ b/packages/cubejs-server-core/package.json
@@ -36,6 +36,7 @@
     "decompress-targz": "^4.1.1",
     "fs-extra": "^8.1.0",
     "http-proxy-agent": "^4.0.1",
+    "is-docker": "^2.1.1",
     "jsonwebtoken": "^8.4.0",
     "lru-cache": "^5.1.1",
     "moment": "^2.29.1",
