--- a/packages/cubejs-client-vue/package.json
+++ b/packages/cubejs-client-vue/package.json
@@ -23,6 +23,7 @@
     "src"
   ],
   "dependencies": {
+    "@cubejs-client/core": "^0.23.0",
     "core-js": "^3.6.5",
     "ramda": "^0.27.0"
   },
