--- a/packages/cubejs-query-orchestrator/package.json
+++ b/packages/cubejs-query-orchestrator/package.json
@@ -32,7 +32,7 @@
   ],
   "dependencies": {
     "aws-sdk": "^2.802.0",
-    "dynamodb-toolbox": "^0.2.0-beta.1",
+    "dynamodb-toolbox": "^0.3.0",
     "generic-pool": "^3.7.1",
     "ramda": "^0.27.0",
     "redis": "^3.0.2"
