feat(cubestore): Move to new sql-parser

--- a/rust/cubestore/Cargo.toml
+++ b/rust/cubestore/Cargo.toml
@@ -14,7 +14,7 @@ repository = "https://github.com/cube-js/cube.js"
 [dependencies]
 tokio = { version = "0.2", features = ["full"] }
 warp = "0.2"
-sqlparser = "0.6.1"
+sqlparser = { git = 'https://github.com/cube-js/sqlparse', branch = 'support-explain-analyze', version = "0.6.1-SNAPSHOT" }
 serde_derive = "1.0.115"
 serde = "1.0.115"
 parquet = { git = 'https://github.com/cube-js/arrow', branch = 'cubestore-2020-12-01', version = "3.0.0-SNAPSHOT" }
