--- a/packages/cubejs-query-orchestrator/package.json
+++ b/packages/cubejs-query-orchestrator/package.json
@@ -21,6 +21,7 @@
     "unit": "jest --runInBand --verbose dist/test/unit",
     "integration": "npm run integration:redis",
     "integration:redis": "jest --runInBand --verbose dist/test/integration",
+    "integration:dynamodb": "jest --runInBand --verbose dist/test/integration/QueryQueueDynamoDB.test.js",
     "lint": "linter src/* test/* --ext .ts,.js",
     "lint:fix": "linter --fix src/* test/* --ext .ts,.js"
   },
@@ -46,6 +47,7 @@
     "@types/ramda": "^0.27.32",
     "@types/redis": "^2.8.28",
     "jest": "^26.6.3",
+    "testcontainers": "^6.4.1",
     "typescript": "~4.1.2"
   },
   "license": "Apache-2.0",
