--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "watch-local": "CUBEJS_API_URL=http://localhost:6020/cubejs-api/v1 rollup -c -w",
     "lint": "lerna run lint",
     "lint:fix": "lerna run lint:fix",
-    "tsc": "lerna run tsc",
-    "tsc:watch": "lerna run watch"
+    "tsc": "tsc --build",
+    "tsc:watch": "tsc --build --watch",
+    "tsc:clean": "rm -rf packages/*/dist"
   },
   "author": "Cube Dev, Inc.",
   "dependencies": {
@@ -56,7 +57,7 @@
     "lerna": "^3.13.1",
     "prettier": "^2.0.5",
     "rollup": "^2.25.0",
-    "typescript": "~4.1.2"
+    "typescript": "^4.1.3"
   },
   "repository": {
     "type": "git",
