--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:fix": "lerna run lint:fix",
     "tsc": "tsc --build",
     "tsc:watch": "tsc --build --watch",
-    "tsc:clean": "rm -rf packages/*/dist"
+    "clean": "rimraf packages/*/{tsconfig.tsbuildinfo,lib,dist}"
   },
   "author": "Cube Dev, Inc.",
   "dependencies": {
@@ -56,6 +56,7 @@
     "is-ci": "^2.0.0",
     "lerna": "^3.13.1",
     "prettier": "^2.0.5",
+    "rimraf": "^3.0.2",
     "rollup": "^2.25.0",
     "typescript": "^4.1.3"
   },
