--- a/packages/cubejs-playground/.babelrc
+++ b/packages/cubejs-playground/.babelrc
@@ -1,8 +1,11 @@
 {
   "presets": [
-    "@babel/preset-react"
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic"
+      }
+    ]
   ],
-  "plugins": [
-    "@babel/plugin-proposal-optional-chaining"
-  ]
+  "plugins": ["@babel/plugin-proposal-optional-chaining"]
 }
