--- a/packages/cubejs-playground/package.json
+++ b/packages/cubejs-playground/package.json
@@ -16,6 +16,7 @@
     "component-cookie": "^1.1.4",
     "customize-cra": "^1.0.0",
     "fast-deep-equal": "^3.1.3",
+    "fetch-retry": "^4.0.1",
     "history": "^4.9.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
@@ -23,16 +24,16 @@
     "prettier": "^2.0.5",
     "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.3",
+    "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-chartjs-2": "^2.7.4",
-    "react-dom": "^16.8.3",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-is": "^16.8.4",
     "react-responsive": "^8.0.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "4.0.1",
     "react-source-render": "4.0.0-1",
     "sql-formatter": "^2.3.2",
     "styled-components": "5.2.0",
@@ -63,7 +64,7 @@
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@types/react": "^16.9.35",
+    "@types/react": "^17.0.0",
     "@types/react-beautiful-dnd": "^13.0.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
