--- a/packages/cubejs-playground/package.json
+++ b/packages/cubejs-playground/package.json
@@ -44,7 +44,8 @@
     "start": "SKIP_PREFLIGHT_CHECK=true EXTEND_ESLINT=true PORT=3080 react-app-rewired start",
     "build": "SKIP_PREFLIGHT_CHECK=true EXTEND_ESLINT=true react-app-rewired --max-old-space-size=3072 build && rm -Rf ../cubejs-server-core/playground/** && cp -R build/ ../cubejs-server-core/playground/ && babel src -d dist --copy-files",
     "eject": "SKIP_PREFLIGHT_CHECK=true EXTEND_ESLINT=true react-scripts eject",
-    "lint": "eslint src/*.js src/*.jsx"
+    "lint": "eslint src/*.js",
+    "lint:fix": "eslint --fix src/*.js"
   },
   "browserslist": [
     ">0.2%",
