--- a/packages/cubejs-query-orchestrator/package.json
+++ b/packages/cubejs-query-orchestrator/package.json
@@ -32,9 +32,10 @@
   ],
   "dependencies": {
     "@cubejs-backend/shared": "^0.25.18",
+    "@types/ioredis": "^4.17.11",
     "generic-pool": "^3.7.1",
-    "ramda": "^0.27.0",
-    "redis": "^3.0.2"
+    "ioredis": "^4.19.4",
+    "ramda": "^0.27.0"
   },
   "devDependencies": {
     "@cubejs-backend/linter": "^0.25.0",
