--- a/packages/cubejs-backend-shared/package.json
+++ b/packages/cubejs-backend-shared/package.json
@@ -23,6 +23,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@cubejs-backend/linter": "^0.25.0",
+    "@types/ip": "^1.1.0",
     "@types/jest": "^26.0.16",
     "@types/node-fetch": "^2.5.7",
     "jest": "^26.6.3",
@@ -30,8 +31,8 @@
   },
   "dependencies": {
     "env-var": "^6.3.0",
-    "node-fetch": "^2.6.1",
-    "node-machine-id": "^1.1.12"
+    "ip": "^1.1.5",
+    "node-fetch": "^2.6.1"
   },
   "publishConfig": {
     "access": "public"
