--- a/packages/cubejs-client-vue/package.json
+++ b/packages/cubejs-client-vue/package.json
@@ -23,8 +23,10 @@
     "src"
   ],
   "dependencies": {
+    "@cubejs-client/core": "^0.24.4",
     "core-js": "^3.6.5",
-    "ramda": "^0.27.0"
+    "ramda": "^0.27.0",
+    "fast-deep-equal" : "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
