--- a/.github/workflows/guides.yml
+++ b/.github/workflows/guides.yml
@@ -7,7 +7,8 @@ on:
       - '.github/actions/deploy-guide.sh'
       - 'guides/**'
     branches:
-      - master
+      - '**'
+#      - master
 
 jobs:
 
@@ -55,6 +56,29 @@ jobs:
         run: .github/actions/deploy-guide.sh
         env:
           GUIDE_SLUG: d3-dashboard
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+
+  mapbox:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: pheel/path-watcher-action@v1
+        id: modified
+        with:
+          paths: '.github/workflows/guides.yml,.github/actions/deploy-guide.sh,guides/mapbox/**'
+
+      - if: steps.modified.outputs.modified
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
+
+      - if: steps.modified.outputs.modified
+        run: .github/actions/deploy-guide.sh
+        env:
+          GUIDE_SLUG: mapbox
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
 
   material-ui-dashboard:
