Keep old redisfactory

--- a/packages/cubejs-query-orchestrator/package.json
+++ b/packages/cubejs-query-orchestrator/package.json
@@ -34,12 +34,12 @@
     "@cubejs-backend/shared": "^0.25.22",
     "generic-pool": "^3.7.1",
     "ioredis": "^4.19.4",
-    "ramda": "^0.27.0"
+    "ramda": "^0.27.0",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "@cubejs-backend/linter": "^0.25.0",
     "@types/generic-pool": "^3.1.9",
-    "@types/ioredis": "^4.17.11",
     "@types/jest": "^26.0.15",
     "@types/node": "^8.10.66",
     "@types/ramda": "^0.27.32",
