--- a/.github/workflows/guides.yml
+++ b/.github/workflows/guides.yml
@@ -7,8 +7,7 @@ on:
       - '.github/actions/deploy-guide.sh'
       - 'guides/**'
     branches:
-      - '**'
-#      - master
+      - master
 
 jobs:
 
