vue-query-builder: add grid-layout

--- a/examples/vue-query-builder/dashboard-app/package.json
+++ b/examples/vue-query-builder/dashboard-app/package.json
@@ -25,6 +25,7 @@
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.5",
     "vue-chartkick": "^0.6.0",
+    "vue-grid-layout": "^2.3.12",
     "vue-router": "^3.5.1",
     "vuedraggable": "^2.24.3",
     "vuetify": "^2.2.11"
