--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -74,6 +74,11 @@ jobs:
         run: yarn tsc
       - name: Lerna test
         run: yarn lerna run --concurrency 1 unit
+      - uses: codecov/codecov-action@v1
+        if: (matrix.node-version == '15.x')
+        with:
+          files: ./packages/*/coverage/clover.xml
+          verbose: true # optional (default = false)
 
   lint:
     runs-on: ubuntu-latest
