--- a/.github/workflows/rust-master.yml
+++ b/.github/workflows/rust-master.yml
@@ -8,6 +8,51 @@ on:
       - master
 
 jobs:
+  debian:
+    name: Debian Rust ${{ matrix.rust }}
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    strategy:
+      fail-fast: false
+      matrix:
+        rust: [nightly-2020-10-25]
+    env:
+      RUST: ${{ matrix.rust }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: ${{ matrix.rust }}
+          override: true
+          components: rustfmt
+      - uses: Swatinem/rust-cache@v1
+      - name: Run cargo fmt cubestore
+        uses: actions-rs/cargo@v1
+        with:
+          command: fmt
+          args: --manifest-path rust/cubestore/Cargo.toml -- --check
+      - name: Run cargo fmt cubehll
+        uses: actions-rs/cargo@v1
+        with:
+          command: fmt
+          args: --manifest-path rust/cubehll/Cargo.toml -- --check
+      - name: Run cargo build
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --manifest-path rust/Cargo.toml -j 4
+      - name: Run cargo test
+        uses: actions-rs/cargo@v1
+        env:
+          CUBESTORE_AWS_ACCESS_KEY_ID: ${{ secrets.CUBESTORE_AWS_ACCESS_KEY_ID }}
+          CUBESTORE_AWS_SECRET_ACCESS_KEY: ${{ secrets.CUBESTORE_AWS_SECRET_ACCESS_KEY }}
+          SERVICE_ACCOUNT_JSON: ${{ secrets.SERVICE_ACCOUNT_JSON }}
+        with:
+          command: test
+          args: --manifest-path rust/Cargo.toml -j 1
+
   cubestore-docker-image-dev:
     name: Release Cube Store :dev image
     runs-on: ubuntu-latest
@@ -95,3 +140,29 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           repository: cubejs/cubestore
           readme-filepath: ./rust/README.md
+
+  cross:
+    runs-on: ubuntu-latest
+    timeout-minutes: 240
+    strategy:
+      matrix:
+        target:
+          # procspawn is using libc::kill(pid as i32, libc::SIGKILL) which is not supported in windows
+          # - x86_64-pc-windows-gnu
+          - x86_64-apple-darwin
+          - x86_64-unknown-linux-musl
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: ${{ matrix.target }}
+          override: true
+      # https://github.com/actions-rs/cargo/issues/6
+      #- uses: actions-rs/cargo@v1
+      - uses: marcopolo/cargo@master
+        with:
+          use-cross: true
+          command: build
+          working-directory: rust
+          args: --release --target=${{ matrix.target }}
