--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -5,6 +5,12 @@ on:
     paths:
       - '.github/workflows/rust.yml'
       - 'rust/**'
+    branches-ignore:
+      - master
+  pull_request:
+    paths:
+      - '.github/workflows/rust.yml'
+      - 'rust/**'
 
 jobs:
   debian:
@@ -44,10 +50,6 @@ jobs:
           args: --manifest-path rust/Cargo.toml -j 4
       - name: Run cargo test
         uses: actions-rs/cargo@v1
-        env:
-          CUBESTORE_AWS_ACCESS_KEY_ID: ${{ secrets.CUBESTORE_AWS_ACCESS_KEY_ID }}
-          CUBESTORE_AWS_SECRET_ACCESS_KEY: ${{ secrets.CUBESTORE_AWS_SECRET_ACCESS_KEY }}
-          SERVICE_ACCOUNT_JSON: ${{ secrets.SERVICE_ACCOUNT_JSON }}
         with:
           command: test
           args: --manifest-path rust/Cargo.toml -j 1
