--- a/.github/workflows/rust-master.yml
+++ b/.github/workflows/rust-master.yml
@@ -151,6 +151,7 @@ jobs:
           # - x86_64-pc-windows-gnu
           - x86_64-apple-darwin
           - x86_64-unknown-linux-musl
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
