--- a/.github/workflows/rust-master.yml
+++ b/.github/workflows/rust-master.yml
@@ -154,6 +154,9 @@ jobs:
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
