--- a/.github/workflows/rust-master.yml
+++ b/.github/workflows/rust-master.yml
@@ -154,8 +154,9 @@ jobs:
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
-        id: buildx
         uses: docker/setup-buildx-action@v1
       - uses: actions-rs/toolchain@v1
         with:
