--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -90,17 +90,17 @@ jobs:
     strategy:
       matrix:
         target:
-          - x86_64-unknown-linux-musl
+          #- x86_64-unknown-linux-musl
           # procspawn is using libc::kill(pid as i32, libc::SIGKILL) which is not supported in windows
           # - x86_64-pc-windows-gnu
           - x86_64-apple-darwin
         include:
-          - os: ubuntu-latest
-            target: x86_64-unknown-linux-musl
-            artifact_name: rust/target/x86_64-unknown-linux-musl/release/miniserve
-            # Maybe will be enabled later
-            cross: false
-            strip: true
+          #- os: ubuntu-latest
+          #  target: x86_64-unknown-linux-musl
+          #  artifact_name: rust/target/x86_64-unknown-linux-musl/release/miniserve
+          #  # Maybe will be enabled later
+          #  cross: false
+          #  strip: true
           #- os: windows-latest
           #  target: x86_64-pc-windows-msvc
           #  artifact_name: rust/target/x86_64-pc-windows-msvc/release/cubestored.exe
