--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -95,7 +95,7 @@ jobs:
       matrix:
         target:
           - x86_64-unknown-linux-gnu
-          - x86_64-unknown-linux-musl
+#          - x86_64-unknown-linux-musl
           # procspawn is using libc::kill(pid as i32, libc::SIGKILL) which is not supported in windows
           # - x86_64-pc-windows-gnu
           - x86_64-apple-darwin
@@ -108,14 +108,14 @@ jobs:
             cross: false
             strip: true
             compress: false
-          - os: ubuntu-latest
-            before_script: cross-ubuntu-musl
-            target: x86_64-unknown-linux-musl
-            artifact_name: rust/target/x86_64-unknown-linux-musl/release/cubestored
-            # Because it's buggy
-            cross: false
-            strip: true
-            compress: true
+          #- os: ubuntu-latest
+          #  before_script: cross-ubuntu-musl
+          #  target: x86_64-unknown-linux-musl
+          #  artifact_name: rust/target/x86_64-unknown-linux-musl/release/cubestored
+          #  # Because it's buggy
+          #  cross: false
+          #  strip: true
+          #  compress: true
           #- os: windows-latest
           #  target: x86_64-pc-windows-msvc
           #  artifact_name: rust/target/x86_64-pc-windows-msvc/release/cubestored.exe
