--- a/rust/package.json
+++ b/rust/package.json
@@ -8,7 +8,7 @@
     "build": "rm -rf dist && npm run tsc",
     "tsc": "tsc",
     "watch": "tsc -w",
-    "postinstall": "node ./dist/post-install.js"
+    "postinstall": "npm run build && node ./dist/post-install.js"
   },
   "author": "Cube Dev, Inc.",
   "license": "Apache-2.0",
