--- a/packages/cubejs-client-react/package.json
+++ b/packages/cubejs-client-react/package.json
@@ -12,6 +12,7 @@
     "@babel/runtime": "^7.1.2",
     "@cubejs-client/core": "^0.26.19",
     "core-js": "^3.6.5",
+    "prop-types": "^15.7.2",
     "ramda": "^0.27.0"
   },
   "peerDependencies": {
