--- a/rust/cubestore/Cargo.toml
+++ b/rust/cubestore/Cargo.toml
@@ -17,7 +17,7 @@ ipc-channel = { version = "0.14.1" }
 base64 = "0.13.0"
 bumpalo = "3.6.1"
 tokio = { version = "1.0", features = ["full", "rt"] }
-warp = "0.3.0"
+warp = { git = 'https://github.com/seanmonstar/warp', version = "0.3.0" }
 sqlparser = "0.7.0"
 serde_derive = "1.0.115"
 serde = "1.0.115"
