misc(ci): Improve lerna cache + cache docs/node_modules

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,8 +35,11 @@ jobs:
           path: |
             ~/.npm
             node_modules
+            */node_modules
             */*/node_modules
           key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
       - name: Yarn install
         uses: borales/actions-yarn@v2.3.0
         with:
