misc(ci): Dont run Build workflow multiple times

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -17,6 +17,11 @@ on:
       - 'yarn.lock'
       - 'docs-gen/**'
       - 'docs/**'
+    branches:
+      - 'master'
+      # feature or legacy releases
+      - 'v*.*.*'
+      - 'v*.*'
   pull_request:
     paths:
       - '.github/workflows/push.yml'
