Typescriptify logging and add logging to IORedis

--- a/packages/cubejs-server-core/tsconfig.json
+++ b/packages/cubejs-server-core/tsconfig.json
@@ -3,7 +3,7 @@
   "include": [
     "src",
     "test"
-  ],
+, "../cubejs-backend-shared/src/logger.js"  ],
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": ".",
