--- a/packages/cubejs-server-core/package.json
+++ b/packages/cubejs-server-core/package.json
@@ -48,6 +48,7 @@
     "node-fetch": "^2.6.0",
     "prettier": "^1.16.4",
     "promise-timeout": "^1.3.0",
+    "ramda": "^0.27.0",
     "semver": "^6.3.0",
     "serve-static": "^1.13.2",
     "uuid": "^3.3.3"
