revert cli and some fixes

--- a/packages/cubejs-backend-cloud/tsconfig.json
+++ b/packages/cubejs-backend-cloud/tsconfig.json
@@ -8,9 +8,7 @@
     "outDir": "dist",
     "rootDir": ".",
     "baseUrl": ".",
-    "allowJs": true,
-    "checkJs": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "strictBindCallApply": true,
