--- a/packages/cubejs-backend-cloud/package.json
+++ b/packages/cubejs-backend-cloud/package.json
@@ -27,10 +27,11 @@
     "typescript": "~4.1.5"
   },
   "dependencies": {
+    "chokidar": "^3.5.1",
+    "cli-progress": "^3.9.0",
     "env-var": "^6.3.0",
     "fs-extra": "^9.1.0",
-    "request-promise": "^4.2.5",
-    "chokidar": "^3.5.1"
+    "request-promise": "^4.2.5"
   },
   "publishConfig": {
     "access": "public"
