--- a/rust/package.json
+++ b/rust/package.json
@@ -16,7 +16,8 @@
     "watch": "tsc -w",
     "lint": "eslint js-wrapper/* --ext .ts,.js",
     "lint:fix": "eslint --fix js-wrapper/* --ext .ts,js",
-    "postinstall": "node ./bin/postinstall-skip-env.js"
+    "postinstall": "node ./bin/postinstall-skip-env.js",
+    "postversion": "./bin/sync-version && git add cubestore/Cargo.toml && git commit --amend -C HEAD"
   },
   "files": [
     "dist",
