--- a/packages/cubejs-jdbc-driver/package.json
+++ b/packages/cubejs-jdbc-driver/package.json
@@ -45,6 +45,9 @@
     "@types/generic-pool": "^3.1.9",
     "@types/node": "^10.17.55",
     "@types/sqlstring": "^2.3.0",
+    "java": "^0.12.1",
+    "jdbc": "^0.7.4",
+    "node-java-maven": "^0.1.2",
     "typescript": "~4.1.5"
   }
 }
