--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -39,6 +39,8 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "checkJs": false,
+    "allowJs": false
   }
 }
