changed query state

--- a/packages/cubejs-playground/package.json
+++ b/packages/cubejs-playground/package.json
@@ -28,6 +28,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-chartjs-2": "^2.7.4",
     "react-helmet": "^6.1.0",
+    "react-hotkeys-hook": "^3.3.0",
     "react-is": "^16.8.4",
     "react-responsive": "^8.0.1",
     "react-router": "^5.1.2",
